--- a/styles/styles.css
+++ b/styles/styles.css
@@ -94,6 +94,16 @@ main {
     text-shadow: 2px 2px 4px rgba(63, 62, 62, 0.6);
 }  */
 
+.navbar .container-fluid {
+    border-radius: 8px;
+    padding: 5px;
+    justify-content: flex-start;
+}
+
+.container-fluid .navbar-toggler {
+        background-color: rgba(255, 255, 255, 0.85); /* Fondo blanco semi-transparente */
+}
+
 .h2Index {
     color: #002E86;
     font-size: 36px;
@@ -224,9 +234,12 @@ h2 {
 }
 
 /*DESTINOS PAGE*/
-/* Espaciado general entre destinos */
+
 article {
     margin: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 /* Título con fondo */
@@ -241,11 +254,9 @@ article h3 {
     color:#002E86
 }
 
-/* Imagen principal y collage (mismo tamaño) */
 .imgDestinos {
-  height: 480px;
-  object-fit: cover;
-  margin-bottom: 15px;
+    height: 480px;
+    margin-bottom: 15px;
 }
 
 article p {
@@ -256,7 +267,8 @@ article p {
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
-    font-size: 20px; 
+    font-size: 20px;
+    box-sizing: border-box; 
 }
 
 .itemsDestinos {
@@ -332,4 +344,23 @@ article div ul li {
     font-optical-sizing: auto;
     font-weight: 300;
     font-style: normal;
+}
+
+@media (max-width: 1000px) {
+body {
+background-color: #f6f6f6;
+}
+.imgDestinos {
+    height: auto;
+    width: 100%;
+}
+}
+@media (max-width: 430px) {
+body {
+background-color: #f6f6f6;
+}
+.imgDestinos {
+    height: auto;
+    width: 100%;
+}
 }
