--- a/styles/styles.css
+++ b/styles/styles.css
@@ -361,6 +361,15 @@ background-color: #f6f6f6;
     width: 100%;
 }
 
+#navbarNav {
+    background: #ffffff;
+    border: 1px solid #d3d3d3;
+    border-radius: 10px;
+    padding: 10px;
+    margin-top: 10px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.35);
+  }
+
 .sobreMi {
     display: flex;
     flex-direction: column;
