--- a/styles/styles.css
+++ b/styles/styles.css
@@ -68,31 +68,6 @@ main {
 .nav-item .nav-link {
     color: #002E86;
 }
-/*.barraNav {
-    position:absolute;
-    display: flex;
-    left: 0;
-    right: 0;
-    bottom: 20px;
-
-}
-.navbar ul{
-    display: flex;
-    justify-content: space-around;  /*separa a lo largo del header
-    list-style: none;
-
-}
-.barraNav ul li a {
-    color: #002E86;
-    font-family: "Outfit", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 250;
-    font-style: normal;
-    text-decoration: none; /*saca el subrayado al hipervinculo
-    font-weight: bold;
-    font-size: 28px;
-    text-shadow: 2px 2px 4px rgba(63, 62, 62, 0.6);
-}  */
 
 .navbar .container-fluid {
     border-radius: 8px;
@@ -356,19 +331,17 @@ article div ul li {
 body {
 background-color: #f6f6f6;
 }
+
+.col {
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
 .imgDestinos {
     height: auto;
     width: 100%;
 }
 
-#navbarNav {
-    background: #ffffff;
-    border: 1px solid #d3d3d3;
-    border-radius: 10px;
-    padding: 10px;
-    margin-top: 10px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.35);
-  }
 
 .sobreMi {
     display: flex;
@@ -376,6 +349,7 @@ background-color: #f6f6f6;
     align-items: center;
 }
 }
+
 @media (max-width: 430px) {
 body {
     background-color: #f6f6f6;
@@ -389,6 +363,11 @@ body {
     margin-top: 10px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.35);
   }
+
+.col {
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
 
 .imgDestinos {
     height: auto;
