arreglos en cards destinos responsive

--- a/css/main.css
+++ b/css/main.css
@@ -252,8 +252,8 @@ section .gridComidas button a {
 @media (max-width: 991px), (hover: none), (pointer: coarse) {
   .flip {
     perspective: none;
+    height: 200px;
   }
-  /* anulamos completamente la animación */
   .flip > .front,
   .flip > .back {
     transition: none;
@@ -263,9 +263,9 @@ section .gridComidas button a {
   .flip > .back {
     display: none;
   }
-  /* dejamos el front visible y normal */
   .flip > .front {
-    position: relative;
+    position: absolute;
+    inset: 0;
     opacity: 1;
   }
 }
