--- a/css/main.css
+++ b/css/main.css
@@ -207,8 +207,8 @@ section .gridComidas button a {
   -webkit-backface-visibility: hidden;
 }
 .flip > .front {
-  background-size: cover !important;
-  background-position: center !important;
+  background-size: cover;
+  background-position: center;
   justify-content: flex-end;
   transform: rotateY(0deg);
 }
